--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-  <header class="container"
+  <header class="container">
   <div class="row">
     <h1 class="col-sm-8">robotics</h1>
     <nav class="col-sm-4">
